2006-08-04  Kjartan Maraas  <kmaraas@gnome.org>

	* samples/canvdemo/circle.c: Fix headers.
	* samples/canvdemo/square.c: Fix headers.
	* samples/controls/bonobo-sample-controls.c: Same here.

2006-06-17  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* bonobo/bonobo-dock-item.c: (bonobo_dock_item_detach):
	Fixes bug #167944. One can move detached toolbars 
	again.

2006-06-17  Kjartan Maraas  <kmaraas@gnome.org>

	* tools/browser/oaf-helper.c: (get_lang): Patch from
	Joe Marcus Clarke to fix a crash when LANG is NULL.
	Closes bug #166430. 

2006-06-17  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Patch from Przemysław Grzegorczyk for
	po/LINGUAS support.
	* po/LINGUAS: Closes bug #338544.

2006-06-16  Tor Lillqvist  <tml@novell.com>

	* tools/browser/oaf-helper.c: Use g_win32_getlocale() on Win32.

2006-05-17  Kjartan Maraas  <kmaraas@gnome.org>

	* bonobo/bonobo-canvas-component.c: (bonobo_canvas_new):
	* bonobo/bonobo-canvas-item.c:
	* bonobo/bonobo-control-frame.c:
	(bonobo_control_frame_get_remote_window):
	* bonobo/bonobo-control.c: (bonobo_control_window_id_from_x11),
	(create_plug), (impl_Bonobo_Control_getWindowId),
	(bonobo_control_construct), (bonobo_control_do_popup_full):
	* bonobo/bonobo-dock-band.c: (bonobo_dock_band_remove),
	(bonobo_dock_band_insert):
	* bonobo/bonobo-dock-item-grip.c: (bonobo_dock_item_grip_dock),
	(bonobo_dock_item_grip_undock):
	* bonobo/bonobo-dock-item.c: (bonobo_dock_item_unrealize),
	(bonobo_dock_item_size_allocate), (bonobo_dock_item_add):
	* bonobo/bonobo-dock.c: (drag_new), (_bonobo_dock_handle_key_nav):
	* bonobo/bonobo-plug.c:
	* bonobo/bonobo-selector-widget.c:
	* bonobo/bonobo-selector.c:
	* bonobo/bonobo-socket.c:
	* bonobo/bonobo-ui-config-widget.c: (set_values):
	* bonobo/bonobo-ui-engine.c: (bonobo_ui_engine_widget_set):
	* bonobo/bonobo-ui-internal-toolbar.c:
	* bonobo/bonobo-ui-preferences.c:
	* bonobo/bonobo-ui-sync-keys.c:
	(bonobo_ui_sync_keys_binding_handle):
	* bonobo/bonobo-ui-sync-toolbar.c: