@@ -1,7 +1,7 @@
 AC_INIT(bonobo/bonobo-ui-engine.h)
 
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(libbonoboui, 2.14.0)
+AM_INIT_AUTOMAKE(libbonoboui, 2.15.0)
 
 AM_MAINTAINER_MODE
 
